<resources>
    <string name="app_name">ZiK</string>
    <string name="enter_akk">Вход в аккаунт</string>
    <string name="login">Логин:</string>
    <string name="enter">Вход</string>
    <string name="confirmation">Подтверждение</string>
    <string name="sms">SMS код</string>
    <string name="send">Отправить</string>
    <string name="calculate">Рассчитать</string>
    <string name="request">Заявка</string>
    <string name="history">История</string>
    <string name="body">Корпус</string>
    <string name="goal">Ворота</string>
    <string name="PRP">ПРП</string>
    <string name="subdivision">Подразделение</string>

    <string-array name="bodyString">
        <item>Кабинет 31</item>
        <item>Кабинет 32</item>
        <item>Кабинет 42</item>
        <item>Лестница 1</item>
    </string-array>

    <string-array name="goalString">
        <item>Двери кабинета 31</item>
        <item>Двери кабинета 32</item>
        <item>Двери кабинета 42</item>
        <item>Дверь на лестницу 1</item>
    </string-array>

    <string-array name="prpString">
        <item>Стол в кабинете 31</item>
        <item>Стол в кабинете 32</item>
        <item>Стол в кабинете 42</item>
        <item>Ступени лестницы 1</item>
    </string-array>

    <string-array name="subdivisionString">
        <item>IT-Квант</item>
        <item>VR/AR</item>
        <item>Гео-Квантум</item>
        <item>Аэро-Квантум</item>
    </string-array>
</resources>