<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Привет"
        android:id="@+id/name_user"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_Group"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/name_user"
        app:layout_constraintBottom_toTopOf="@id/second_group">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_first_group"
            android:text="@string/body"
            android:textColor="@color/black"
            android:textSize="18dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@id/spinner_first_group"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_first_group"
            app:layout_constraintTop_toBottomOf="@id/text_first_group"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_group"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toTopOf="@id/third_Group"
        app:layout_constraintTop_toBottomOf="@id/first_Group">
        <TextView
            android:text="@string/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_second_group"
            app:layout_constraintBottom_toTopOf="@id/spinner_second_group"
            android:textColor="@color/black"
            android:textSize="18dp"
            tools:ignore="MissingConstraints" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_second_group"
            app:layout_constraintTop_toBottomOf="@id/text_second_group"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/third_Group"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/second_group">
        <TextView
            android:text="@string/PRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_third_Group"
            app:layout_constraintBottom_toTopOf="@id/spinner_third_Group"
            android:textColor="@color/black"
            android:textSize="18dp"
            tools:ignore="MissingConstraints" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_third_Group"
            app:layout_constraintTop_toBottomOf="@id/text_third_Group"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>